# hospital_api

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  testar_conexao.py
alembic/: env.py
alembic/versions/: 72ab9b04dbbd_create_users_table.py
app/: main.py
app/api/: auth.py  deps.py  router.py  routes.py
app/api/routers/v1/: admin.py  appointment.py  attendant.py  auth.py  dashboard.py  doctor.py  patient.py  user.py
app/core/: config.py  dependencies.py  security.py
app/db/: database.py  session.py
app/models/: __init__.py  appointment.py  attendant.py  doctor.py  patient.py  user.py
app/schemas/: appointment.py  attendant.py  auth.py  dashboard.py  doctor.py  patient.py  user.py
app/services/: appointment.py  attendant.py  dashboard.py  doctor.py  patient.py  user.py
scripts/: create_admin.py
